--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,6 @@
   <modules>
     <module>plooze-core</module>
     <module>plooze-cli</module>
+    <module>plooze-webapp</module>
   </modules>
 </project>
