--- a/plooze-webapp/pom.xml
+++ b/plooze-webapp/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.essembeh.plooze</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.2</version>
+		<version>0.3-SNAPSHOT</version>
 	</parent>
 	<groupId>org.essembeh.plooze</groupId>
 	<artifactId>plooze-webapp</artifactId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.essembeh.plooze</groupId>
 			<artifactId>plooze-core</artifactId>
-			<version>0.2</version>
+			<version>0.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
