--- a/plooze-cli/pom.xml
+++ b/plooze-cli/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.essembeh.plooze</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4</version>
 	</parent>
 	<groupId>org.essembeh.plooze</groupId>
 	<artifactId>plooze-cli</artifactId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.essembeh.plooze</groupId>
 			<artifactId>plooze-core</artifactId>
-			<version>0.4-SNAPSHOT</version>
+			<version>0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
