--- a/plooze-core/pom.xml
+++ b/plooze-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.essembeh.plooze</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.4</version>
+		<version>0.5-SNAPSHOT</version>
 	</parent>
 	<groupId>org.essembeh.plooze</groupId>
 	<artifactId>plooze-core</artifactId>
